--- a/partials/footer.html
+++ b/partials/footer.html
@@ -5,4 +5,5 @@
         Static website proudly powered by <a href="https://github.com/es6rocks/harmonic/">Harmonic</a>
     </span>
 </footer>
+<script type="text/javascript" src="/harmonic.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
